[package]
name = "db-derive"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
repository = "https://github.com/axumrs/db-derive"
homepage = "https://axum.rs"
description = "axum.rs专题：使用过程宏实现CRUD操作"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
